# getml-demo

./: .dockerignore  .env  .gitconfig  .gitignore  Dockerfile  README.md  actors.ipynb  adventure_works.ipynb  adventure_works_spark.ipynb  air_pollution.ipynb  air_pollution_demo.ipynb  air_pollution_prop.ipynb  atherosclerosis-short.ipynb  atherosclerosis.ipynb  atherosclerosis_demo.ipynb  consumer_expenditures.ipynb  consumer_expenditures_demo.ipynb  cora.ipynb  cora_demo.ipynb  cora_sota.ipynb  cora_spark.ipynb  docker-compose.yml  dodgers.ipynb  dodgers_demo.ipynb  dodgers_prop.ipynb  formula1.ipynb  imdb.ipynb  imdb_demo.ipynb  imdb_spark.ipynb  interstate94-short.ipynb  interstate94.ipynb  interstate94_demo.ipynb  interstate94_prop.ipynb  loans-short.ipynb  loans.ipynb  loans_demo.ipynb  loans_short.ipynb  loans_small.ipynb  movie_lens.ipynb  movie_lens_demo.ipynb  (+17 more)
.devcontainer/: Dockerfile.dev  check_docker_rootless.sh  devcontainer.json  entrypoint.sh
articles/: getting_started.md  loans.md  occupancy_detection.md
assets/: forecast_prophet.csv  pred_prophet_30d.csv  zuordnung.json
binder/: apt.txt  getml-serverextension.py  getml_binder_init.py  getml_install.py  getml_server_extension.py  postBuild  requirements.txt  watch.py  workspace-dev.json  workspace.json
binder/.getML/getml-0.12-beta-linux/: config.json  token.json
binder/.jupyter/: jupyter_config.py  jupyter_nbconvert_config.py  jupyter_notebook_config.py
binder/.labextensions/: btest-0.1.0-py3-none-any.whl  getml_demo_analytics-0.1.0-py3-none-any.whl  getml_extension-0.1.0-py3-none-any.whl
comparisons/: air_pollution.csv  comparisons.py
datasets/: loans_population_test.csv
docker/: README.md  docker-compose.yml  python3.11.Dockerfile  python3.8.Dockerfile
fastprop_benchmark/: air_pollution_prop.ipynb  dodgers_prop.ipynb  interstate94_prop.ipynb  occupancy_prop.ipynb  robot_prop.ipynb
fastprop_benchmark/comparisons/: air_pollution.csv  comparisons.py  dodgers.csv  interstate94.csv  occupancy.csv  robot.csv
getml_examples/consumer_expenditures/: README.md  consumer_expenditures.ipynb
getml_examples/getting_started/: README.md  getting_started.ipynb
getml_examples/interstate94/: forecast_prophet.csv  interstate94.ipynb  pred_prophet_30d.csv
getml_examples/loans/: README.md  loans.ipynb
getml_examples/occupancy_detection/: README.md  occupancy_detection.ipynb
kaggle_notebooks/: cora_getml_vs_gnn.ipynb  epilepsy_recognition.ipynb  getml-and-gnns-a-natural-symbiosis.ipynb
prediction/: Dockerfile.pred  getml_engine.py  main.py  prestart.sh  request_test.json
propositionalization/: air_pollution_prop.ipynb  dodgers_prop.ipynb  interstate94_prop.ipynb  occupancy_prop.ipynb  robot_prop.ipynb
propositionalization/comparisons/: air_pollution.csv  dodgers.csv  interstate94.csv  occupancy.csv  robot.csv
propositionalization/utils/: __init__.py  ft_time_series_builder.py
requirements/: base.txt  requirements.3.11.txt  requirements.3.8.txt
training/: Dockerfile.train  train.py
utils/: .ft_time_series_builder.py.swp  __init__.py  add_original_columns.py  benchmark.py  cesiumml_builder.py  ft_time_series_builder.py  kats_builder.py  load.py  remove_target_column.py  rolling.py  ts_fresh_builder.py  tsfel_builder.py  tsflex_builder.py  zuordnung.py
(+33 files in other folders)
