[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getml-vertexai"
version = "0.1.0"
description = "A collection of utilities for using getML with Vertex AI."
readme = "README.md"
license = { text = "ELv2" }
authors = [{ email = "alexandros@getml.com" }, { name = "Alexandros Ladas" }]
maintainers = [
    { email = "alexandros@getml.com" },
    { name = "Alexandros Ladas" },
]
requires-python = ">=3.10,<3.12"

# Dependency pinning introduced issues within the Vertex AI Workbench environment.
# Ommiting the version pinning until a better solution is found.
dependencies = [
    "google-cloud-aiplatform",
    "google-cloud-storage",
    "getml==1.4.0",
    "numpy<2.0.0",
    "pyyaml",
    "uv",
]

[project.urls]
Homepage = "https://code17.io"
Repository = "https://github.com/getml/getml-demo"
Documentation = "https://docs.getml.com/latest/"
Issues = "https://github.com/getml/getml-demo/issues"

[tool.hatch]
version.path = "src/getml/vertexai/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.git",
    "/.venv",
    "/.vscode",
    "/__pycache__",
    "/.ipynb_checkpoints",
    "/build",
]
include = ["src/getml/vertexai/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/getml"]

[tool.hatch.envs]
default.installer = "uv"
default.dependencies = [
    "getml==1.4.0",
    "ipykernel",
    "numpy<2.0.0",
    "google-cloud-aiplatform[prediction]==1.60.0",
    "pytest==8.3.2",
    "ruff==0.5.5",
    "mypy==1.11.1",
    "nbconvert==7.16.4",
]

[tool.ruff]
src = ["src"]
line-length = 88
lint.isort.known-first-party = ["getml", "getml.vertexai"]
extend-include = ["*.ipynb"]
